# agent-router

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
configs/: models.yaml  routes.yaml
docs/: SETUP_GUIDE.md
scripts/: deploy_modal.py  eval_router.py  generate_training_data.py  seed_db.py  train_router.py
src/bandit/: arm_elimination.py  budget_manager.py
src/dashboard/: app.py  charts.py
src/dashboard/pages/: cost_analysis.py  live_demo.py  overview.py
src/router/: learned_router.py  pipeline.py  rule_router.py
src/utils/: cost.py  llm_client.py  logger.py
tests/: test_bandit.py  test_learned_router.py  test_pipeline.py  test_rule_router.py
